# oleg-corob

./: .gitignore  pyproject.toml
humanrights_site/: db.sqlite3
humanrights_site/articles/: admin.py  models.py  views.py
humanrights_site/articles/migrations/: 0003_alter_article_language_delete_attachment.py
humanrights_site/contact/: views.py
humanrights_site/documents/: models.py  urls.py  views.py
humanrights_site/documents/migrations/: 0001_initial.py  0002_attachment_order.py
humanrights_site/homepage/: views.py
humanrights_site/humanrights_site/: context_processors.py  settings.py  urls.py
humanrights_site/static_dev/css/: base.css
humanrights_site/static_dev/css/articles/: list.css
humanrights_site/static_dev/css/contact/: contact.css
humanrights_site/static_dev/css/documents/: all_attachments_list.css
humanrights_site/static_dev/css/homepage/: home.css
humanrights_site/static_dev/css/includes/: footer.css  header.css  latest-articles.css
humanrights_site/static_dev/js/includes/: header.js  latest-articles.js
humanrights_site/templates/: base.html
humanrights_site/templates/articles/: detail.html  list.html
humanrights_site/templates/contact/: contact.html
humanrights_site/templates/documents/: all_attachments_list.html  attachment_file_view.html
humanrights_site/templates/homepage/: home.html
humanrights_site/templates/includes/: footer.html  header.html  latest-articles.html
