[project]
name = "oleg-corob"
version = "0.1.0"
description = "text"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django (>=5.2,<6.0)",
    "python-decouple (>=3.8,<4.0)",
    "django-ckeditor-5 (>=0.2.17,<0.3.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
]


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
django-debug-toolbar = "^5.1.0"
isort = "^6.0.1"


[tool.poetry.group.flake8.dependencies]
flake8 = "^7.2.0"
flake8-pyproject = "^1.2.3"
# Import-related
flake8-implicit-str-concat = "^0.5.0"
flake8-import-order = "^0.18.2"
flake8-quotes = "^3.4.0"
# Code quality
flake8-clean-block = "^0.1.2"
# Style
flake8-print = "^5.0.0"
flake8-use-pathlib = "^0.3.0"
pep8-naming = "^0.14.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
target-version = ["py310", "py311", "py312"]
line-length = 120
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | venv
    | migrations
    | __pycache__
)/
'''


[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["core", "plov", "users", "reviews"]
known_third_party = ["django"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip = ["migrations", "venv", ".venv"]
default_section = "THIRDPARTY"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true


[tool.flake8]
max-line-length = 120
ignore = ["E203", "E266", "E501", "W503", "I202"]
import-order-style = "google"
inline-quotes = "single"
application-import-names = ["core", "plov", "users", "reviews"]
exclude = [".git", ".venv", "venv", "*/migrations/*", "__pycache__", "*.pyc"]
